gitops/apps/forgejo/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: forgejo
  labels:
    name: forgejo
